--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.12.7",
 		"@apollo/experimental-nextjs-app-support": "^0.11.7",
+		"classnames": "^2.5.1",
 		"graphql": "^16.8.1",
 		"next": "^14.2.3",
 		"react": "^18.3.0",
@@ -18,6 +19,9 @@
 		"@types/node": "^22.10.8",
 		"@types/react": "^18.3.0",
 		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^8.21.0",
+		"@typescript-eslint/parser": "^8.21.0",
+		"autoprefixer": "^10.4.20",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.3"
 	}
