--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "dependencies": {
     "@apollo/client": "^3.12.7",
     "@apollo/experimental-nextjs-app-support": "^0.11.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
     "classnames": "^2.5.1",
     "graphql": "^16.8.1",
     "next": "^14.2.3",
@@ -23,6 +28,11 @@
     "@typescript-eslint/parser": "^8.21.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
+    "postcss": "^8.5.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.1.3",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
   }
